src/test/deca/context/valid/homemade/test/test312_nom_parametre_override.deca
// test valide de la règle 3.12

class Autruche {
    int a;
}

class Pinguin extends Autruche {
    int calcul(int a) {
    }
}