src/test/deca/context/invalid/homemade/tests/test_cast_invalid_boolean_int.deca
// test invalide de la règle cast



{
    int a = 8;
    (boolean) (a);
}